# deskbrid

./: .codex-prompt.md  .gitignore  AGENTS.md  BACKENDS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  DEPENDENCIES.md  MCP_ATSPI_DESIGN.md  PROTOCOL.md  README.md  ROADMAP.md  fix_last_two.py  resolve_all.py  resolve_all_pr9.py  resolve_correct.py  resolve_daemon.py  resolve_debug.py  resolve_final.py  resolve_final2.py  resolve_for_real.py  resolve_pr10.py  resolve_remaining.py  server.json
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  cleanup-runs.yml  publish-mcp.yml  release.yml
clients/python/: README.md  pyproject.toml
clients/python/deskbrid/: actions_async.py  actions_sync.py  client.py  events.py  models.py
deploy/: deskbrid.service
docs/: API.md  ARCHITECTURE.md  CONTRIBUTING.md  DE_TEST_MATRIX.md  PROTOCOL.md  ROADMAP.md  TESTING_NEEDED.md
docs/wiki/: INDEX.md  installation.md
docs/wiki/development/: architecture.md
docs/wiki/features/: accessibility.md  audio.md  bluetooth.md  clipboard.md  files.md  input.md  layout-profiles.md  media.md  monitors.md  network.md  notifications.md  screenshots.md  services.md  system.md  terminals.md  windows-workspaces.md
docs/wiki/integrations/: python.md
docs/wiki/protocol/: events.md  overview.md
extensions/deskbrid@deskbrid/: extension.js  metadata.json
hermes/: deskbrid.md  deskbrid.toml
hermes/plugin/skills/: deskbrid.md
scripts/: deploy-site.sh
site/: index.html  install.sh
src/: a11y.rs  abs_pointer.rs  browser.rs  capture.rs  cli.rs  client.rs  clipboard.rs  color.rs  config.rs  daemon.rs  dbus.rs  events.rs  input.rs  lib.rs  main.rs  permissions.rs  protocol.rs  setup.rs  tiling.rs
src/a11y/: actions.rs  bus.rs  setup.rs  tree.rs  value.rs
src/backend/: cosmic.rs  detect.rs  gnome.rs  hyprland.rs  kde.rs  mod.rs  print.rs  types.rs  wlroots.rs  x11.rs
src/backend/cosmic/: helpers.rs  keyboard_layout.rs  mod.rs  mod.rs.orig  system_info.rs  trait_impl.rs
src/backend/gnome/: audio.rs  core.rs  inner.rs  keysym.rs  mod.rs  notifications.rs  parsers.rs  screenshot.rs  trait_impl.rs  windows.rs
src/backend/gnome/screenshot/: capture.rs  crop.rs  fallback.rs  mod.rs  screencast.rs
src/backend/hyprland/: audio.rs  core.rs  free_functions.rs  mod.rs  screenshot.rs  trait_impl.rs
src/backend/kde/: desktop_settings.rs  helpers.rs  keyboard_layout.rs  mod.rs  networking.rs  screenshot.rs  tests.rs  trait_impl.rs  workspaces.rs
src/backend/kde/networking/: bluetooth.rs  mod.rs  network.rs
src/backend/labwc/: helpers.rs  input.rs  mod.rs  mod.rs.orig  monitor.rs  trait_impl.rs  workspaces.rs
src/backend/niri/: keyboard_layout.rs  mod.rs  mod.rs.orig  trait_impl.rs
src/backend/sway/: mod.rs.orig  trait_impl.rs
src/backend/wayfire/: keyboard_layout.rs  mod.rs  mod.rs.orig  trait_impl.rs
src/backend/x11/: audio.rs  bluetooth.rs  files.rs  helpers.rs  mod.rs  monitor.rs  networking.rs  notifications.rs  screenshot.rs  system.rs  system_info.rs  tests.rs  trait_impl.rs  windows.rs
src/cli/: apps.rs  audio.rs  audit.rs  bluetooth.rs  clipboard.rs  color.rs  desktop.rs  files.rs  input.rs  into_action.rs  mod.rs  monitor.rs  mpris.rs  network.rs  notify.rs  system.rs  terminal.rs  windows.rs  workspace.rs
src/cli/into_action/: desktop.rs  screenshot.rs  system.rs
src/cmd/update/: github.rs
src/daemon/: apps.rs  audit.rs  client.rs  dashboard.rs  dispatch.rs  dispatch_helpers.rs  execute.rs  execute_a11y.rs  execute_audit.rs  execute_color.rs  execute_delegated.rs  execute_macro.rs  execute_network.rs  execute_screenshot.rs  execute_sessions.rs  execute_stubs.rs  execute_system.rs  helpers.rs  macro_engine.rs  mod.rs  mpris.rs  persistence.rs  rate_limit.rs  rules.rs  schedule.rs  sysfs.rs  terminal_create.rs  tests.rs
src/daemon/capabilities/: mod.rs
src/daemon/dashboard/: mod.rs  render_data.rs  server.rs  template.html
src/daemon/portal/: helpers.rs  mod.rs  screencast.rs
src/daemon/rules/: eval.rs
src/mcp/: helpers.rs  mod.rs  server.rs  tool_list.rs  tools.rs  tools_desktop.rs  tools_screencast.rs  tools_system.rs  types.rs
src/permissions/: tests.rs
src/permissions/tests/: action_names.rs
src/protocol/: events.rs  mod.rs  parse.rs  serialize.rs  types.rs
src/protocol/parse/: a11y.rs  apps.rs  audio.rs  audit.rs  bluetooth.rs  browser.rs  clipboard.rs  color_pick.rs  files.rs  helpers.rs  hotkeys.rs  input.rs  location.rs  macro_cmd.rs  monitor.rs  mpris.rs  network.rs  notifications.rs  process.rs  rules.rs  screenshot.rs  system.rs  windows.rs  workspace_layout.rs
src/protocol/serialize/: a11y.rs  a11y_location.rs  action_type.rs  apps.rs  audio.rs  audit.rs  bluetooth.rs  color_pick.rs  connection.rs  files.rs  input.rs  macro_cmd.rs  process.rs  screenshot.rs  system.rs  windows.rs
src/tray/: mod.rs  state.rs  ui.rs
tests/: protocol.rs
