[package]
name = "deskbrid"
version = "0.6.0"
edition = "2024"
description = "The HAL your Linux desktop agents are missing"
license = "MIT"
repository = "https://github.com/coe0718/deskbrid"

[features]
default = []
cosmic = ["dep:cosmic-protocols", "dep:wayland-client", "dep:wayland-protocols"]
pipewire = ["dep:pipewire", "dep:spa", "dep:image"]

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Protocol
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async trait support
async-trait = "0.1"

# DBus
zbus = "5"

# Permissions
toml = "0.8"

# Socket peer credentials (Linux SO_PEERCRED)
libc = "0.2"

# Core
anyhow = "1"
base64 = "0.22"
dirs = "6"
futures-util = "0.3"
reqwest = { version = "0.12", features = ["json"] }
tokio-tungstenite = "0.26"
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# File watching
notify = { version = "7", features = ["macos_kqueue"] }

# COSMIC desktop environment (Wayland protocol client)
cosmic-protocols = { version = "0.2", default-features = false, features = ["client"], optional = true }
wayland-client = { version = "0.31", optional = true }
wayland-protocols = { version = "0.32", features = ["client", "staging"], optional = true }

# PipeWire (optional)
pipewire = { version = "0.8", optional = true }
spa = { version = "0.8", package = "libspa", optional = true }
image = { version = "0.25", default-features = false, features = ["png"], optional = true }

[[bin]]
name = "deskbrid"
path = "src/main.rs"

[[bin]]
name = "cosmic-helper"
path = "src/bin/cosmic_helper.rs"
required-features = ["cosmic"]
