[package]
name = "deskbrid"
version = "0.11.2"
edition = "2024"
description = "The HAL your Linux desktop agents are missing"
license = "MIT"
repository = "https://github.com/coe0718/deskbrid"

[features]
default = []
pipewire = ["dep:pipewire", "dep:spa"]

[dependencies]
# Async runtime
tokio = { version = "1", features = ["fs", "process", "sync", "time", "io-util", "net", "rt", "rt-multi-thread", "macros", "signal"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Protocol
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async trait support
async-trait = "0.1"

# DBus
zbus = "5"

# Permissions
toml = "0.8"

# Socket peer credentials (Linux SO_PEERCRED)
libc = "0.2"

# Core
anyhow = "1"
sha2 = "0.10"
rusqlite = { version = "0.32", features = ["bundled"] }
base64 = "0.22"
dirs = "6"
futures-util = "0.3"
reqwest = { version = "0.12", features = ["json"] }
tempfile = "3"
tokio-tungstenite = "0.26"
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# File watching
notify = { version = "7", features = ["macos_kqueue"] }

# MCP server (Model Context Protocol)
rmcp = { version = "1", features = ["server", "transport-io", "macros"] }
schemars = "1"

# COSMIC desktop environment (Wayland protocol client)
cosmic-protocols = { version = "0.2", default-features = false, features = ["client"] }
wayland-client = { version = "0.31" }
wayland-protocols = { version = "0.32", features = ["client", "staging"] }

# PipeWire (optional)
pipewire = { version = "0.8", optional = true }
spa = { version = "0.8", package = "libspa", optional = true }
image = { version = "0.25", default-features = false, features = ["png"] }
evdev = "0.13.2"
ksni = "0.3.4"

[target.aarch64-unknown-linux-gnu.dependencies]
openssl = { version = "0.10", features = ["vendored"] }

[[bin]]
name = "deskbrid"
path = "src/main.rs"

[[bin]]
name = "cosmic-helper"
path = "src/bin/cosmic_helper.rs"

[[bin]]
name = "labwc-helper"
path = "src/bin/labwc_helper.rs"

[profile.release]
strip = "symbols"
lto = true
codegen-units = 1
panic = "abort"
