[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "deskbrid"
version = "0.11.3"
description = "Python client for the Deskbrid JSON socket protocol"
requires-python = ">=3.9"
authors = [{ name = "Deskbrid" }]

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
where = ["."]
include = ["deskbrid*"]
